Scrollbar bugfix

--- a/assets/css/main.sass
+++ b/assets/css/main.sass
@@ -3,6 +3,9 @@ html *
 	box-sizing: border-box
 ::-webkit-scrollbar
 	display: none
+	width: 0px
+::-webkit-scrollbar-thumb
+	background: #FF0000
 #settings-container
 	position: absolute
 	top: 0
